<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/mamunur"
        android:layout_gravity="center"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/job_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_title"
        android:textSize="18sp"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:textSize="18sp"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="16sp"
        android:paddingBottom="4dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:paddingBottom="4dp"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="16sp"
        android:paddingBottom="4dp"/>

    <TextView
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        android:textSize="16sp"
        android:paddingBottom="4dp"/>

    <TextView
        android:id="@+id/linkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linkedin"
        android:textSize="16sp"
        android:paddingBottom="4dp"/>

    <TextView
        android:id="@+id/github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github"
        android:textSize="16sp"
        android:paddingBottom="4dp"/>
</LinearLayout>
